k8s/vps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unbora-ingress
  namespace: unbora
spec:
  ingressClassName: traefik
  rules:
    - host: unbora.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unbora-backend-service
                port:
                  number: 3001
    - host: www.unbora.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unbora-backend-service
                port:
                  number: 3001
    - host: admin.unbora.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unbora-backend-service
                port:
                  number: 3001
    - host: unbora.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unbora-backend-service
                port:
                  number: 3001
    - host: www.unbora.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unbora-backend-service
                port:
                  number: 3001
    - host: admin.unbora.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unbora-backend-service
                port:
                  number: 3001
